# pratapocos

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.apimock.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  tox.ini  uwsgi.ini
.github/workflows/: python-app-cd-flyio.yml  python-app-ci.yml
apimock/: Dockerfile
apimock/server/: index.js
apimock/server/controllers/: core.js
apimock/server/data/: cadastros.json  index.js
docker/fixtures/: cadastros_fixture.json
frontend/: .env  package-lock.json
frontend/src/: main.js
frontend/src/api/: core.api.js
frontend/src/components/: AppNavBar.vue  Cadastro.vue  CadastroForm.vue
frontend/src/layouts/: README.md
frontend/src/pages/accounts/: LoginView.vue
frontend/src/pages/base/: HomeView.vue
frontend/src/pages/core/: CadastroListView.vue
frontend/src/router/: README.md  core.routes.js  index.js
frontend/src/settings/: README.md  environment.js
frontend/src/stores/: README.md  coreStore.js
pratapocos/: conftest.py
pratapocos/accounts/: admin.py  apps.py  models.py  views.py
pratapocos/accounts/migrations/: 0001_initial.py
pratapocos/accounts/tests/: fixtures.py  test_auth_api.py
pratapocos/base/: apps.py  views.py
pratapocos/core/: admin.py  apps.py  models.py  views.py
pratapocos/core/migrations/: 0001_initial.py  0002_create_cadastro.py
pratapocos/core/service/: cadastros_svc.py
pratapocos/core/tests/: test_cadastros.py
pratapocos/pratapocos/: api.py  settings.py  urls.py  wsgi.py
